# runtime-base-rust

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.armv7  LICENSE  README.md  build.rs  docker-compose.yml  scrap.txt
.github/workflows/: ci.yml  release.yml
bundled/models/: README.md
manifests/: README.md
manifests/core/big_band_classics/: config.yml
manifests/core/council_chat/: config.yml
manifests/core/overseer/: config.yml
manifests/core/side_quest/: config.yml
manifests/wasteland/a01/: config.yml
manifests/wasteland/knowledge_survival/: config.yml
manifests/wasteland/monitoring_battery/: config.yml
manifests/wasteland/monitoring_temp/: config.yml
manifests/wasteland/valve_control/: README.md
manifests/wasteland/water_level/: config.yml
modules/: README.md
modules/core/big_band_classics/: config.yml
modules/core/council_chat/: config.yml
modules/core/overseer/: config.yml
modules/core/side_quest/: config.yml
modules/core/survon_llm/: config.yml
modules/core/wasteland_manager/: config.yml
modules/wasteland/api_gateway_status/: config.yml
modules/wasteland/arduino_sensor/: config.yml
modules/wasteland/knowledge_survival/: config.yml
modules/wasteland/monitoring_battery/: config.yml
modules/wasteland/monitoring_pressure/: config.yml
modules/wasteland/monitoring_temp/: config.yml
modules/wasteland/valve_control/: README.md  config.yml
modules/wasteland/water_level/: config.yml
src/: app.rs  bus.rs  database.rs  error.rs  event.rs  event_bus.rs  knowledge.rs  lib.rs  llm.rs  main.rs  module.rs  module_manager.rs  ollama.rs  orchestrator.rs  runtime.rs  ui.rs  utility.rs
src/module/: get_template.rs  get_view_type.rs  has_knowledge_dir.rs  load_from_manifest_path.rs  mod.rs  render_detail.rs  render_overview_cta.rs  trait_clone.rs  trait_module_handler.rs
src/module/config/: base_module_config.rs  generic_config.rs  is_blinkable.rs  mod.rs  service_discovery_config.rs
src/module/module_manager/: discover_modules.rs  get_handler.rs  (+23 more)
src/modules/: config_schema.rs  config_validator.rs  mod.rs  module_handler.rs
src/tests/: README.md  integration_command_queuing.rs
src/ui/: chat_history.rs  com.rs  document_popup_widget.rs  document_viewer.rs  entertainment.rs  external_viewer.rs  knowledge.rs  llm.rs  llm_chat.rs  messages.rs  mod.rs  module_detail.rs  modules_list.rs  monitoring.rs  overview.rs  splash.rs  style.rs  template.rs
src/util/: ascii.rs  bus.rs  database.rs  image.rs  knowledge.rs  llm.rs  log.rs  mod.rs  string.rs  wasteland_manager.rs
src/widgets/: mod.rs
test_modules/test_module/: meta.json  strategy.rs
tests/: integration_tests.rs
tmp/wasteland/: README.md
(+471 files in other folders)
