[package]
name = "runtime-base-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
gag = "1.0.0"
pdf = "0.8"
ratatui = "0.29.0"
image = "0.25"
ratatui-image = "1.0"
uuid = { version = "1.0", features = ["v4"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
tui-scrollview = "0.5.1"
throbber-widgets-tui = "0.5"

# Pure Rust GUI - no native dependencies!
eframe = "0.24"  # egui framework
egui = "0.24"

# Error handling
color-eyre = "0.6"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Knowledge files
pdf-extract = "0.7"

# LLM - working llama_cpp bindings
llama_cpp = { version = "0.3", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2.175"

[[bin]]
name = "runtime-base-rust"
path = "src/main.rs"
