[package]
name = "runtime-base-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
# list build dependencis here when we need a build script.

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-serial = "5.4"
gag = "1.0.0"
pdf = "0.8"
ratatui = "0.29.0"
image = "0.25"
ratatui-image = "8.0"
uuid = { version = "1.0", features = ["v4"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
tui-scrollview = "0.5.3"
throbber-widgets-tui = "0.5"
lazy_static = "1.4"
rodio = "0.17"
hound = "3.5"
btleplug = "0.11.8"

# Error handling
color-eyre = "0.6"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Knowledge files
pdf-extract = "0.7"

# LLM - working llama_cpp bindings
llama_cpp = { version = "0.3", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2.175"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "runtime-base-rust"
path = "src/main.rs"

